--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@
 
 ### PsychoPy Logfiles ###
 # COG-ED
-\01_Paradigms\COG-ED\data\
+**/01_Paradigms/COG-ED/data/
 # ER-ED
 **/01_Paradigms/ER-ED/ER_ED/data/
